[package]
name = "token-retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version =  "0.12.9", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
once_cell = "1.20.2"
actix-web = "4"
rust_decimal = { version = "1.30.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.30.0"
env_logger = "0.9"